# projetaai

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: beta-release.yml  pre-test.yml  test.yml
docs/: Makefile  conf.py  index.rst
docs/diagrams/: ci_sequence.puml  run_sequence.puml  starter_structure.puml  wbs.puml
docs/junit/: test-results.xml
junit/: test-results.xml
kedro_projetaai/: __init__.py  overrides.py  plugin.py  starters.py
kedro_projetaai/cli/: __init__.py  catalog.py  ci.py  cli.py  constants.py  credential.py  local.py  model.py  new.py  pipeline.py  plugin.py  projetaai_extras.py  run.py
kedro_projetaai/framework/: model.py
kedro_projetaai/packing/: suggestions.py
kedro_projetaai/serving/: model.py
kedro_projetaai/templates/project/{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: settings.py
kedro_projetaai/utils/: constants.py  io.py  iterable.py  kedro.py  other.py  readers.py  script.py  string.py  typing.py
kedro_projetaai/utils/datasets/: __init__.py  datasets.py  extras.py  path_patterns.py  pickle_methods.py
kedro_projetaai/utils/extra_datasets_utils/: __init__.py  path_patterns.py  pickle_methods.py
tests/: conftest.py  test_datasets.py  test_readers.py  test_version.py
tests/framework/: test_model.py
tests/serving/: test_model.py
