[metadata]
name = kedro-projetaai
version = 0.0.1
author = Ipiranga
description = 'Kedro plugin that adds interfaces for production'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    kedro==0.18.2
    cookiecutter
    click
    tomli
    flask
    flask-cors
    waitress
    typing_extensions
    attr
    GitPython
    flatten-dict

[options.entry_points]
kedro.project_commands =
    projetaai = kedro_projetaai.plugin:cli
kedro.hooks =
    projetaai-overrides = kedro_projetaai.plugin:overrides
kedro.starters =
    projetaai = kedro_projetaai.starters:project_starters
projetaai.cli =
    local = kedro_projetaai.cli.local:LocalCLI

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    pytest-tmpfs
    kedro-pytest
    flake8
    flake8-annotations
    flake8-docstrings
docs =
    sphinx
    revitron-sphinx-theme @ git+https://github.com/revitron/revitron-sphinx-theme.git@master
    sphinx-copybutton
    sphinx-autodoc-typehints
    sphinx-autoapi
dev =
    %(test)s
    %(docs)s
    yapf
    pre-commit

[options.packages.find]
exclude = 
    tests*
    docs*
